.k8s/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  ports:
    - port: 3331
  selector:
    app: booking-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: shel404/booking-service:latest
          ports:
            - containerPort: 3331
          livenessProbe:
            httpGet:
              path: /health
              port: 3331
            initialDelaySeconds: 60
            periodSeconds: 10
