.k8s/notification-service.yaml
# notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  ports:
    - port: 3332
  selector:
    app: notification-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notification-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: shel404/notification-service:latest
          ports:
            - containerPort: 3332
          livenessProbe:
            httpGet:
              path: /health
              port: 3332
            initialDelaySeconds: 60
            periodSeconds: 10
