.k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: ticket-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: shel404/payment-service:2.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ticket-system
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
