.k8s/train-service.yaml
# train-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: train-service
spec:
  ports:
    - port: 3333
  selector:
    app: train-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: train-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: train-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: train-service
    spec:
      containers:
        - name: train-service
          image: shel404/train-service:latest
          ports:
            - containerPort: 3333
          livenessProbe:
            httpGet:
              path: /health
              port: 3332
            initialDelaySeconds: 60
            periodSeconds: 10
