.k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
    - port: 3330
  selector:
    app: user-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: shel404/user-service:latest
          ports:
            - containerPort: 3330
          livenessProbe:
            httpGet:
              path: /health
              port: 3330
            initialDelaySeconds: 60
            periodSeconds: 10
