.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-system-ingress
  namespace: ticket-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3330
          - path: /booking
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 3331
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3332
          - path: /train
            pathType: Prefix
            backend:
              service:
                name: train-service
                port:
                  number: 3333
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8080
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
